# freecad-mcp

./: ANALYSIS.md  CHANGELOG.md  CLAUDE.md  COOKBOOK.md  README.md  TOOLS_REFERENCE.md  pyproject.toml
addon/FreeCADMCP/rpc_server/: rpc_server.py
src/freecad_mcp/: server.py
